--- a/style.css
+++ b/style.css
@@ -1,64 +1,66 @@
-*{
+* {
     color: white;
 
     font-family: 'Roboto', sans-serif;
-   
-    
+
 }
 
-.nav-section{
+
+.nav-section {
     background-color: #252525;
     /* overflow: auto; */
 }
 
-.question-myStyle{
+.question-myStyle {
     /* border: solid 3px #FFE209; */
     background-color: #FFE209;
     color: black;
     font-weight: bold;
 }
 
-.question-myStyle:hover{
+.question-myStyle:hover {
     cursor: pointer;
     color: black;
-    
+
 }
 
-.itil-title{
-    color:#FFE209;
+.itil-title {
+    color: #FFE209;
 }
-.contents{
+
+.contents {
     background-color: #252525;
     overflow: auto;
     padding: 5%;
+    height: 100vh;
 }
 
-.footer{
+.footer {
     background-color: #FFE209;
 }
 
-.smal-container{
+.smal-container {
     display: flex;
     flex-direction: row;
 }
 
-.right-answer-myStyle{
+.right-answer-myStyle {
     color: #01090f;
     background-color: #32a028;
     box-shadow: 0 0 15px #21e70f, 0 0 15px #21e70f, 0 0 15px #21e70f;
 }
 
-.wrong-answer-myStyle{
+.wrong-answer-myStyle {
     color: #01090f;
-    
+
     box-shadow: 0 0 15px #fc4b3f, 0 0 15px #fc4b3f, 0 0 15px #fc4b3f;
 }
 
-.removing-question-style:hover{
+.removing-question-style:hover {
     background-color: #ED8A1F;
 }
 
-.winner-screen{
+.winner-screen {
     padding: 5%;
     max-width: 1140px;
     border-radius: 25px;
@@ -67,10 +69,10 @@
     overflow: auto;
 }
 
-.winner-img{
+.winner-img {
     width: 400px;
 }
 
-.d-none{
+.d-none {
     display: none;
 }
